--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 Javascript/Html:
-	- calendario, implementare i bottoni per chiudere la descrizione di un evento una volta visualizzato nello spazio dell'agenda
-	- ? calendario, implementare la possibilità di aggiungere e togliere un evento nella lista predefinita dell'agenda
+	- calendario: implementare i bottoni per chiudere la descrizione di un evento una volta visualizzato nello spazio dell'agenda
+	- ? calendario: implementare la possibilità di aggiungere e togliere un evento nella lista predefinita dell'agenda
+	- scheda elettorale: modificare l'implementazione Luca Giurato
